--- a/package.json
+++ b/package.json
@@ -11,18 +11,16 @@
   ],
   "homepage": "https://fullcalendar.io/",
   "docs": "https://fullcalendar.io/docs",
-  "bugs": "https://fullcalendar.io/reporting-bugs",
+  "bugs": {
+    "url": "https://fullcalendar.io/reporting-bugs"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/fullcalendar/fullcalendar.git",
+    "url": "git+https://github.com/fullcalendar/fullcalendar.git",
     "homepage": "https://github.com/fullcalendar/fullcalendar"
   },
   "license": "MIT",
-  "author": {
-    "name": "Adam Shaw",
-    "email": "arshaw@arshaw.com",
-    "url": "http://arshaw.com/"
-  },
+  "author": "Adam Shaw <arshaw@arshaw.com> (http://arshaw.com/)",
   "copyright": "2020 Adam Shaw",
   "workspaces": [
     "packages/*",
@@ -130,5 +128,9 @@
     "typescript": "^4.0.5",
     "webpack": "^5.3.1",
     "webpack-cli": "^4.1.0"
+  },
+  "main": "gulpfile.js",
+  "directories": {
+    "example": "examples"
   }
 }
